# Task-Tracker-CLI

./: .gitignore  README.md  cli.py  pyproject.toml  task_tracker.py  taskmanager.py  tasks.json
src/task_tracker/: cli.py  task_tracker.py  taskmanager.py
src/task_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
task_tracker/: cli.py  taskmanager.py
